--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .split{
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -5,18 +11,21 @@
 
 
 .dashboard{
+    display: grid;
     background-color: aqua;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .main{
+    display: grid;
     background-color: grey;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .head{
+    display: grid;
     background-color: white;
-    min-height: 10vh;
+    height: 10vh;
 }
 #header-text{
     margin: 0;
