--- a/style.css
+++ b/style.css
@@ -12,11 +12,15 @@
 
 .dashboard{
     display: grid;
-    grid-template-rows: 0.5fr 0.5fr 2fr;
+    grid-template-rows: 0.5fr 2fr 2fr;
     background-color: #008CBA;
 
 }
-
+#dashboard-title{
+    font-size: 2em;
+    text-align: center;
+    padding: 20px;
+}
 
 .buttons-set{
     display: flex;
@@ -25,6 +29,7 @@
 }
 .button{
     background-color: #008CBA;
+    height: 2em;
     border: none;
     outline: none;
 }
