--- a/style.css
+++ b/style.css
@@ -46,24 +46,55 @@ button:hover {
     background-color: grey;
     height: 100vh;
 }
-
-.head{
-    display: grid;
+.head {
     background-color: white;
+    padding: 10px 0;
 }
 
-.top{
+.top-1 {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px
+}
+
+
+.top-bar-1 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: 30px;
+    flex: 1;
+}
+
+#myInputBar{
+    width: 50rem;
+    height: 30px;
+}
+.top-bar-2 {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin-right: 30px;
+}
+
+
+.top-2{
     display: flex;
     flex-direction: row;
 }
 
-.top-bar-1{
+.Profile{
     display: flex;
-    
-    margin-right: 1rem;
+    flex-direction: row;
+    flex: 1;
+}
+.Name{
+    display: flex;
+    flex-direction: column;
 }
 
 
-.top-bar-2{
+
+.button-use{
     display: flex;
 }
