--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ button:hover {
 .head {
     background-color: white;
     padding: 10px 0;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+
 }
 
 .top-1 {
@@ -81,20 +83,56 @@ button:hover {
 .top-2{
     display: flex;
     flex-direction: row;
+    margin-top: 20px;
 }
 
 .Profile{
     display: flex;
     flex-direction: row;
-    flex: 1;
+    flex: 1;  /* takes remaining space */
+    margin-left: 30px; 
 }
 .Name{
     display: flex;
     flex-direction: column;
+    margin-left: 10px;
+}
+
+#hi-there{
+    font-weight: bold;
+    font-size: small;
+}
+
+
+#Person-Name{
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.button-use{
+    display: flex;
+    gap: 20px;
+    margin-right: 1.5rem;
+    flex: 0 0 auto; /* fixed size, content-based */
+}
+
+
+.use-button {
+    width: 100px;
+    height: 36px;
+    font-size: 14px;
+    border-radius: 50px;
+    background-color: #008CBA;
+    color: aliceblue;
+    flex-shrink: 0;
 }
 
 
 
-.button-use{
-    display: flex;
+
+
+.board{
+    display: grid;
+    background-color: rgb(246, 243, 243);
+    grid-template-columns: 3fr 1fr;
 }
