--- a/style.css
+++ b/style.css
@@ -191,3 +191,25 @@ button:hover {
     display: grid;
     grid-template-rows: 1fr 1fr;
 }
+
+.text{
+    font-size: 16px;
+    margin: 10px;
+}
+
+
+
+.box{
+    background-color: white;
+    border-radius: 12px;
+    padding: 20px;
+    width: 80%;
+    min-height: 85%;
+    margin-left: 10px;
+
+    box-shadow: 
+        0 2px 4px rgba(0, 0, 0, 0.08),
+        0 8px 16px rgba(0, 0, 0, 0.06);
+
+    position: relative;
+}
